fixing alignment

--- a/app/ui/section2/section2.module.scss
+++ b/app/ui/section2/section2.module.scss
@@ -7,6 +7,7 @@
     height: fit-content;
     padding-top: 8rem;
     gap: 8rem;
+    padding-bottom: 8rem;
 
    
     .left_side{
