--- a/app/ui/section3/section3.module.scss
+++ b/app/ui/section3/section3.module.scss
@@ -5,6 +5,9 @@
         height: 100vh;
         padding-top: 8rem;
         gap: 4.4rem;
+        //padding-bottom: 8rem;
+        margin-top: 5rem;
+        margin-bottom: 5rem;
 
  
     .left_side{
